Add input & output fields, and copy text on change

--- a/app/views/application/home.html.haml
+++ b/app/views/application/home.html.haml
@@ -1,1 +1,5 @@
-%p Hello world
+%form
+  %label{for: "plain-text"} Plain text
+  %input#plain-text.input-xlarge{type: "text", placeholder: "Type some text"}
+  %label{for: "enrypted-text"} Encrypted text
+  %input#encrypted-text.input-xlarge{type: "text", disabled: true}
